fixed few things on mobile resposive

--- a/responsive.css
+++ b/responsive.css
@@ -33,7 +33,6 @@
   .banner-content {
     justify-content: center;
     display: grid;
-    grid-template-columns: repeat(1,100%);
     background-size: cover;
     padding-top: 100px;
     padding-bottom: 100px;
@@ -58,6 +57,11 @@
 
   .banner2-container {
     flex-direction: column-reverse;
+  }
+
+
+  .banner-button{
+    width: 100%;
   }
   /*------------- End of Banner Styles ------------- */
 
